--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_clean_architecture: ^4.1.1
+  http: ^0.12.2
+  flutter_verification_code: ^0.2.1
+  shared_preferences: ^0.5.12+4
+  flutter_auth_buttons: ^0.10.0
+  google_sign_in: ^4.5.9
+  flutter_facebook_auth: ^2.0.2+1
+  # sign_in_with_apple: ^2.5.4
+  flutter_overlay_loader: ^0.0.2
 
 dev_dependencies:
   flutter_test:
