assets. flutter_typeahead.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,17 +19,20 @@ dependencies:
   # sign_in_with_apple: ^2.5.4
   flutter_overlay_loader: ^0.0.2
   flutter_svg: ^0.19.1
-  # device_preview: ^0.4.8
   pin_code_fields: ^6.1.0
+  flutter_typeahead: ^1.9.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  device_preview: ^0.4.8
 
 flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
+    - assets/icons/tab_bar/
   fonts:
     - family: Poppins
       fonts:
