--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   pin_code_fields: ^6.1.0
   flutter_typeahead: ^1.9.3
   cached_network_image: ^2.5.1
+  custom_radio_grouped_button: ^1.0.6+1
 
 dev_dependencies:
   flutter_test:
