--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,41 +3,48 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+    sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
+    cached_network_image: ^2.5.1
+    carousel_slider: ^3.0.0
+    cupertino_icons: ^1.0.0
+    custom_radio_grouped_button: ^1.0.6+1
+    dio: ^3.0.8
+    flutter:
+        sdk: flutter
+    flutter_auth_buttons: ^0.10.0
+    flutter_clean_architecture: ^4.1.1
+    flutter_facebook_auth: ^2.0.2+1
+    flutter_overlay_loader: ^0.0.2
+    flutter_svg: ^0.19.1
+    flutter_typeahead: ^1.9.3
+    google_sign_in: ^4.5.9
+    http: ^0.12.2
+    path_provider: ^1.6.28
+    pdf: ^1.3.24
+    pin_code_fields: ^6.1.0
+    screenshot: ^0.2.0
+    share_plus: ^1.2.0
+    shared_preferences: ^0.5.12+4
+    wechat_assets_picker: ^4.2.2
+    open_file: ^3.0.3
+    permission_handler: ^5.1.0+2
+    downloads_path_provider: ^0.1.0
 
-  cupertino_icons: ^1.0.0
-  flutter_clean_architecture: ^4.1.1
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
-  flutter_auth_buttons: ^0.10.0
-  google_sign_in: ^4.5.9
-  flutter_facebook_auth: ^2.0.2+1
-  # sign_in_with_apple: ^2.5.4
-  flutter_overlay_loader: ^0.0.2
-  flutter_svg: ^0.19.1
-  pin_code_fields: ^6.1.0
-  flutter_typeahead: ^1.9.3
-  cached_network_image: ^2.5.1
-  custom_radio_grouped_button: ^1.0.6+1
-  wechat_assets_picker: ^4.2.2
-  carousel_slider: ^3.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  device_preview: ^0.4.8
+    device_preview: ^0.4.8
+    flutter_test:
+        sdk: flutter
 
 flutter:
-  uses-material-design: true
-  assets:
-    - assets/
-    - assets/icons/
-    - assets/icons/tab_bar/
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: fonts/Poppins-Regular.ttf
+    uses-material-design: true
+    assets:
+        - assets/
+        - assets/icons/
+        - assets/icons/tab_bar/
+    fonts:
+        - family: Poppins
+          fonts:
+              - asset: fonts/Poppins-Regular.ttf
