--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,40 +3,41 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-    sdk: ">=2.7.0 <3.0.0"
+    sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-    cached_network_image: ^2.5.1
-    carousel_slider: ^3.0.0
-    cupertino_icons: ^1.0.0
-    custom_radio_grouped_button: ^1.0.6+1
-    dio: ^3.0.8
+    cached_network_image: ^3.2.0
+    carousel_slider: ^4.0.0
+    cupertino_icons: ^1.0.4
+    custom_radio_grouped_button: ^2.1.1
+    dio: ^4.0.4
     flutter:
         sdk: flutter
-    flutter_auth_buttons: ^0.10.0
-    flutter_clean_architecture: ^4.1.1
-    flutter_facebook_auth: ^2.0.2+1
-    flutter_overlay_loader: ^0.0.2
-    flutter_svg: ^0.19.1
-    flutter_typeahead: ^1.9.3
-    google_sign_in: ^4.5.9
-    http: ^0.12.2
-    path_provider: ^1.6.28
-    pdf: ^1.3.24
-    pin_code_fields: ^6.1.0
-    screenshot: ^0.2.0
-    share_plus: ^1.2.0
-    shared_preferences: ^0.5.12+4
-    wechat_assets_picker: ^4.2.2
-    open_file: ^3.0.3
-    permission_handler: ^5.1.0+2
-    downloads_path_provider: ^0.1.0
-    dotted_border: ^1.0.7
-    image_picker: ^0.6.7+22
+    # flutter_auth_buttons: ^0.10.0
+    flutter_clean_architecture: ^5.0.2
+    flutter_facebook_auth: ^4.0.1
+    flutter_overlay_loader: ^1.0.3
+    flutter_svg: ^1.0.3
+    flutter_typeahead: ^3.2.4
+    google_sign_in: ^5.2.3
+    http: ^0.13.4
+    intl: ^0.17.0
+    path_provider: ^2.0.9
+    pdf: ^3.7.1
+    pin_code_fields: ^7.3.0
+    screenshot: ^1.2.3
+    share_plus: ^3.0.4
+    shared_preferences: ^2.0.13
+    wechat_assets_picker: ^6.3.1
+    open_file: ^3.2.1
+    permission_handler: ^8.3.0
+    # downloads_path_provider: ^0.1.0
+    dotted_border: ^2.0.0+2
+    image_picker: ^0.8.4+8
 
 
 dev_dependencies:
-    device_preview: ^0.4.8
+    device_preview: ^1.0.0
     flutter_test:
         sdk: flutter
 
