--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     flutter:
         sdk: flutter
     # flutter_auth_buttons: ^0.10.0
+    auth_buttons: ^2.0.4
     flutter_clean_architecture: ^5.0.2
     flutter_facebook_auth: ^4.0.1
     flutter_overlay_loader: ^1.0.3
