--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     open_file: ^3.2.1
     permission_handler: ^8.3.0
     # downloads_path_provider: ^0.1.0
+    downloads_path_provider_28: ^0.1.2
     dotted_border: ^2.0.0+2
     image_picker: ^0.8.4+8
 
