--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     dotted_border: ^2.0.0+2
     image_picker: ^0.8.4+8
     printing: ^5.7.2
+    intl_phone_number_input: ^0.7.0+2
 
 
 dev_dependencies:
