--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     image_picker: ^0.8.4+8
     printing: ^5.7.2
     intl_phone_number_input: ^0.7.0+2
+    pattern_formatter: ^2.0.0
 
 
 dev_dependencies:
