--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     printing: ^5.7.2
     intl_phone_number_input: ^0.7.0+2
     pattern_formatter: ^2.0.0
+    flutter_image_compress: ^1.1.0
 
 
 dev_dependencies:
