--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     intl_phone_number_input: ^0.7.0+2
     pattern_formatter: ^2.0.0
     flutter_image_compress: ^1.1.0
+    share_files_and_screenshot_widgets: ^1.0.6
 
 
 dev_dependencies:
