--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     flutter_image_compress: ^1.1.0
     google_maps_flutter:
     geolocator: ^8.2.0
+    flutter_google_places: ^0.3.0
 
 
 dev_dependencies:
