Added Google map integration for listings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     google_maps_flutter:
     geolocator: ^8.2.0
     flutter_google_places: ^0.3.0
+    flutter_switch: ^0.3.2
 
 
 dev_dependencies:
