--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,9 @@
-org.gradle.jvmargs=-Xmx1536M
+#org.gradle.jvmargs=-Xmx1536M <- old config
+org.gradle.jvmargs=-Xmx4608m
+#org.gradle.jvmargs=-Xmx4g
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
+org.gradle.parallel=false
+org.gradle.caching=false
+org.gradle.configureondemand=false
