--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,8 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.multidex:multidex:2.0.1'
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
 }
 
 flutter {
