--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   grouped_list: ^4.2.0
   file_picker: ^4.5.1
   flutter_easyloading: ^3.0.5
+  mixpanel_flutter: ^1.5.1
 
 
 dev_dependencies:
