--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_typeahead: ^3.2.4
   google_sign_in: ^5.2.3
+  the_apple_sign_in: ^1.1.1
   http: ^0.13.4
   intl: ^0.17.0
   path_provider: ^2.0.9
