--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   file_picker: ^4.5.1
   flutter_easyloading: ^3.0.5
   mixpanel_flutter: ^1.5.1
+  percent_indicator: ^3.4.0
+  fluttertoast: ^8.0.9
 
 
 dev_dependencies:
