--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   mixpanel_flutter: ^1.5.1
   percent_indicator: ^3.4.0
   fluttertoast: ^8.0.9
+  dropdown_search: ^0.5.0
+  update_available: ^2.1.0
+  upgrader: ^4.4.0
+  
 
 
 dev_dependencies:
