--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   dropdown_search: ^0.5.0
   update_available: ^2.1.0
   upgrader: ^4.4.0
+  liquid_progress_indicator: ^0.4.0
+  # percent_indicator: ^4.2.2
   
 
 
