--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_facebook_auth: ^4.0.1
   flutter_overlay_loader: ^1.0.3
   flutter_svg: ^1.0.3
-  flutter_typeahead: ^3.2.4
+  flutter_typeahead: ^4.1.1
   google_sign_in: ^5.2.3
   the_apple_sign_in: ^1.1.1
   http: ^0.13.4
@@ -31,7 +31,7 @@ dependencies:
   share_plus: ^4.0.9
   shared_preferences: ^2.0.13
   wechat_assets_picker: ^7.0.0
-  open_file: ^3.2.1
+  # open_file: ^3.2.1
   permission_handler: ^8.3.0
   dotted_border: ^2.0.0+2
   image_picker: ^0.8.4+8
@@ -45,7 +45,7 @@ dependencies:
   flutter_switch: ^0.3.2
   shimmer: ^2.0.0
   grouped_list: ^4.2.0
-  file_picker: ^4.5.1
+  # file_picker: ^4.5.1
   flutter_easyloading: ^3.0.5
   mixpanel_flutter: ^1.5.1
   fluttertoast: ^8.0.9
@@ -54,6 +54,12 @@ dependencies:
   upgrader: ^4.4.0
   percent_indicator: ^3.0.1
   month_year_picker: ^0.1.0+3
+  # better_open_file: ^3.6.4
+  open_filex: ^4.3.0
+
+dependency_overrides:
+  google_api_headers: ^1.3.0-dev.0
+  device_info_plus_windows: ^6.0.0
   
 
 
